<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bizmda.bizsip</groupId>
    <artifactId>BizSIP</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>integrator</module>
        <module>common</module>
        <module>sample</module>
        <module>server-adaptor-spring-boot-starter</module>
        <module>client-adaptor-spring-cloud-starter</module>
        <module>api-gateway</module>
        <module>client-adaptor</module>
        <module>dynamic-config</module>
        <module>integrator-common</module>
    </modules>

    <properties>
        <core.version>1.0-SNAPSHOT</core.version>
        <java.version>1.8</java.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <lombok.version>1.18.12</lombok.version>
        <spring-boot.version>2.2.9.RELEASE</spring-boot.version>
        <spring-platform.version>Cairo-SR3</spring-platform.version>
        <spring-cloud-dependencies.version>Hoxton.SR8</spring-cloud-dependencies.version>
        <spring-cloud-alibaba-dependencies.version>2.2.1.RELEASE</spring-cloud-alibaba-dependencies.version>
        <hutool.version>5.5.6</hutool.version>
        <snakeyaml.version>1.8</snakeyaml.version>
        <velocity.version>1.7</velocity.version>
        <magic-api.version>0.4.7</magic-api.version>
        <netty.version>4.1.43.Final</netty.version>
        <mysql.version>8.0.16</mysql.version>
        <mybatisplus.version>3.3.1</mybatisplus.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.spring.platform</groupId>
                <artifactId>platform-bom</artifactId>
                <version>${spring-platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ssssssss</groupId>
                <artifactId>magic-api</artifactId>
                <version>${magic-api.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bizmda.bizsip</groupId>
                <artifactId>common</artifactId>
                <version>${core.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bizmda.bizsip</groupId>
                <artifactId>integrator-common</artifactId>
                <version>${core.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bizmda.bizsip</groupId>
                <artifactId>sample-integrator-service</artifactId>
                <version>${core.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bizmda.bizsip</groupId>
                <artifactId>client-adaptor-spring-cloud-starter</artifactId>
                <version>${core.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bizmda.bizsip</groupId>
                <artifactId>server-adaptor-spring-boot-starter</artifactId>
                <version>${core.version}</version>
            </dependency>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-all</artifactId>
                <version>${netty.version}</version>
            </dependency>
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatisplus.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <target>${java.version}</target>
                        <source>${java.version}</source>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>


</project>